fix docs and users
