# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api
 definitions:
   dto.CategoryCreateResponse:
     properties:
@@ -205,112 +206,13 @@ definitions:
       status:
         type: string
     type: object
+host: localhost:8080
 info:
   contact: {}
+  description: API for managing purchases.
+  title: Purchases API
+  version: "1.0"
 paths:
-  /categories:
-    get:
-      description: List categories
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/dto.CategoryResponse'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      summary: List categories
-      tags:
-      - categories
-    post:
-      consumes:
-      - application/json
-      description: Create category
-      parameters:
-      - description: request body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.CategoryRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/dto.CategoryCreateResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      summary: Create category
-      tags:
-      - categories
-  /categories/{id}:
-    delete:
-      description: Delete category
-      parameters:
-      - description: category ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      summary: Delete category
-      tags:
-      - categories
-    get:
-      description: Get category
-      parameters:
-      - description: category ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.CategoryResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/dto.ErrorResponse'
-      summary: Get category
-      tags:
-      - categories
   /login:
     post:
       consumes:
@@ -341,7 +243,118 @@ paths:
       summary: Login
       tags:
       - auth
-  /orders:
+  /private/categories:
+    get:
+      description: List categories
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.CategoryResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: List categories
+      tags:
+      - categories
+    post:
+      consumes:
+      - application/json
+      description: Create category
+      parameters:
+      - description: request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CategoryRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.CategoryCreateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create category
+      tags:
+      - categories
+  /private/categories/{id}:
+    delete:
+      description: Delete category
+      parameters:
+      - description: category ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete category
+      tags:
+      - categories
+    get:
+      description: Get category
+      parameters:
+      - description: category ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.CategoryResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get category
+      tags:
+      - categories
+  /private/orders:
     get:
       description: List orders
       produces:
@@ -365,6 +378,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: List orders
       tags:
       - orders
@@ -398,10 +413,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Create order
       tags:
       - orders
-  /orders/{id}:
+  /private/orders/{id}:
     delete:
       description: Delete order
       parameters:
@@ -427,6 +444,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete order
       tags:
       - orders
@@ -457,10 +476,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Get order
       tags:
       - orders
-  /orders/{orderId}/items:
+  /private/orders/{orderId}/items:
     post:
       consumes:
       - application/json
@@ -496,10 +517,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Add order item
       tags:
       - orders
-  /orders/{orderId}/items/{productId}:
+  /private/orders/{orderId}/items/{productId}:
     delete:
       description: Delete order item
       parameters:
@@ -530,6 +553,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete order item
       tags:
       - orders
@@ -573,10 +598,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Update order item
       tags:
       - orders
-  /products:
+  /private/products:
     get:
       description: List product
       produces:
@@ -596,6 +623,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: List product
       tags:
       - products
@@ -625,10 +654,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Create product
       tags:
       - products
-  /products/{id}:
+  /private/products/{id}:
     delete:
       description: Delete product
       parameters:
@@ -650,6 +681,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete product
       tags:
       - products
@@ -676,10 +709,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Get product
       tags:
       - products
-  /products/{productId}/aliases:
+  /private/products/{productId}/aliases:
     delete:
       description: Delete all product aliases
       parameters:
@@ -701,6 +736,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete all product aliases
       tags:
       - products
@@ -729,6 +766,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: List product aliases
       tags:
       - products
@@ -763,10 +802,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Create product alias
       tags:
       - products
-  /products/{productId}/aliases/{id}:
+  /private/products/{productId}/aliases/{id}:
     delete:
       description: Delete product alias
       parameters:
@@ -793,6 +834,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete product alias
       tags:
       - products
@@ -824,10 +867,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Get product alias
       tags:
       - products
-  /products/by-alias:
+  /private/products/by-alias:
     get:
       consumes:
       - application/json
@@ -853,10 +898,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Find product by alias
       tags:
       - products
-  /stores:
+  /private/stores:
     get:
       description: List store
       produces:
@@ -876,6 +923,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: List store
       tags:
       - stores
@@ -905,10 +954,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Create store
       tags:
       - stores
-  /stores/{id}:
+  /private/stores/{id}:
     delete:
       description: Delete store
       parameters:
@@ -930,6 +981,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete store
       tags:
       - stores
@@ -956,10 +1009,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Get store
       tags:
       - stores
-  /users:
+  /private/users:
     get:
       description: list users
       produces:
@@ -983,6 +1038,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: list users
       tags:
       - users
@@ -1015,7 +1072,7 @@ paths:
       summary: Create user
       tags:
       - users
-  /users/{id}:
+  /private/users/{id}:
     delete:
       description: delete user by ID
       parameters:
@@ -1041,6 +1098,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: delete user by ID
       tags:
       - users
@@ -1071,6 +1130,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Get user by ID
       tags:
       - users
@@ -1109,7 +1170,15 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Update user
       tags:
       - users
+securityDefinitions:
+  BearerAuth:
+    description: Введите токен в формате "Bearer <token>"
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
